src/objects/ENC_Respuesta__c.object
<CustomObject>
    <description>Representa el conjunto de respuestas de una pantalla de la Encuesta</description>
    <fields>
        <fullName>ENR_LKP_Encuesta_Realizada__c</fullName>
        <description>Encuesta realizada a la que pertenece la respuesta.</description>
        <label>Encuesta Realizada</label>
        <referenceTo>ENC_Encuesta__c</referenceTo>
        <relationshipLabel>Encuestas Realizadas: Respuesta</relationshipLabel>
        <relationshipName>RespuestasRealizadas</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ENR_LKP_Resp_Pregunta__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Pregunta vinculada a la respuesta.</description>
        <label>Pregunta</label>
        <referenceTo>ENC_Pregunta__c</referenceTo>
        <relationshipLabel>Encuestas Realizadas: Respuesta</relationshipLabel>
        <relationshipName>RespuestasRealizadas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ENR_LKP_WorkOrder__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Servicio (si aplica) vinculado a la respuesta.</description>
        <label>Servicio</label>
        <referenceTo>WorkOrder</referenceTo>
        <relationshipLabel>Encuestas Realizadas: Respuesta</relationshipLabel>
        <relationshipName>RespuestasRealizadas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ENR_TXT_Gremio__c</fullName>
        <description>Literal del gremio (si aplica) asociado a la respuesta.</description>
        <label>Gremio</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ENR_TXT_Num_Orden_Trabajo__c</fullName>
        <description>Nº de Servicio (si aplica) asociado a la respuesta.</description>
        <label>Nº de Servicio</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ENR_TXT_Pregunta__c</fullName>
        <description>Texto de la pregunta asociada esta respuesta.</description>
        <label>Pregunta</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ENR_TXT_Respuesta__c</fullName>
        <description>Texto de la respuesta.</description>
        <label>Respuesta</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Encuesta Realizada: Respuesta</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>es</language>
    </listViews>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Nombre</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Encuestas Realizadas: Respuesta</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>